--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<div class="time-card"><p>12:41</p></div>
 					<div class="buttons">
 						<button>edit</button>
-						<button onclick='this.parentElement.remove()'>delete</button>
+						<button onclick='alert("Current time:" + "" + new Date())'>delete</button>
 					</div>
 				</div>
 			</div>
@@ -37,7 +37,7 @@
 					<div class="time-card"><p>15:50</p></div>
 					<div class="buttons">
 						<button>edit</button>
-						<button onclick='this.parentElement.remove()'>delete</button>
+						<button onclick='alert("Current time:" + "" + new Date())'>delete</button>
 					</div>
 				</div>
 			</div>
@@ -46,7 +46,7 @@
 					<div class="time-card"><p>15:50</p></div>
 					<div class="buttons">
 						<button>edit</button>
-						<button onclick='this.parentElement.remove()'>delete</button>
+						<button onclick='alert("Current time:" + "" + new Date())'>delete</button>
 					</div>
 				</div>
 			</div>
