--- a/index.html
+++ b/index.html
@@ -26,19 +26,25 @@
 			<div class="alarm">
 				<div class="color">
 					<div class="time-card"><p>12:41</p></div>
-					<button onclick='alert("Current time:" + "" + new Date())'>delete</button>
+					<div class='buttons'>
+						<button onclick='alert("Current time:" + "" + new Date())'>show more</button>
+					</div>
 				</div>
 			</div>
 			<div class="alarm">
 				<div class="color">
 					<div class="time-card"><p>15:50</p></div>
-					<button onclick='alert("Current time:" + "" + new Date())'>delete</button>
+					<div class='buttons'>
+						<button onclick='alert("Current time:" + "" + new Date())'>show more</button>
+					</div>
 				</div>
 			</div>
 			<div class="alarm">
 				<div class="color">
 					<div class="time-card"><p>15:50</p></div>
-					<button onclick='alert("Current time:" + "" + new Date())'>delete</button>
+					<div class='buttons'>
+						<button onclick='alert("Current time:" + "" + new Date())'>show more</button>
+					</div>
 				</div>
 			</div>
 		</div>
