--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 				<div class="color">
 					<div class="time-card"><p>12:41</p></div>
 					<div class='buttons'>
+						<button onclick='this.querySelector(".alarm").remove()'>delete</button>
 						<button onclick='alert("Current time:" + " " + new Date())'>show more</button>
 					</div>
 				</div>
@@ -35,6 +36,7 @@
 				<div class="color">
 					<div class="time-card"><p>15:50</p></div>
 					<div class='buttons'>
+						<button onclick='this.querySelector(".alarm").remove()'>delete</button>
 						<button onclick='alert("Current time:" + " " + new Date())'>show more</button>
 					</div>
 				</div>
@@ -43,6 +45,7 @@
 				<div class="color">
 					<div class="time-card"><p>15:50</p></div>
 					<div class='buttons'>
+						<button onclick='this.querySelector(".alarm").remove()'>delete</button>
 						<button onclick='alert("Current time:" + " " + new Date())'>show more</button>
 					</div>
 				</div>
