--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<div class="color">
 					<div class="time-card"><p>12:41</p></div>
 					<div class='buttons'>
-						<button onclick='alert("Current time:" + " " + new Date())'>more info</button>
+						<button onclick='alert("the alarm will ring in:" + " " + new Date())'>more info</button>
 					</div>
 				</div>
 			</div>
@@ -35,7 +35,7 @@
 				<div class="color">
 					<div class="time-card"><p>15:50</p></div>
 					<div class='buttons'>
-						<button onclick='alert("Current time:" + " " + new Date())'>more info</button>
+						<button onclick='alert("the alarm will ring in:" + " " + new Date())'>more info</button>
 					</div>
 				</div>
 			</div>
@@ -43,7 +43,7 @@
 				<div class="color">
 					<div class="time-card"><p>15:50</p></div>
 					<div class='buttons'>
-						<button onclick='alert("Current time:" + " " + new Date())'>more info</button>
+						<button onclick='alert("the alarm will ring in:" + " " + new Date())'>more info</button>
 					</div>
 				</div>
 			</div>
